...
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_gravity="center">


    <Button
        android:id="@+id/buttonPatientInfoUpdateDrug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/update" />


    <Button
        android:id="@+id/buttonPatientInfoDeleteDrug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/delete" />

    </LinearLayout>
...
